--- a/css/Styles.css
+++ b/css/Styles.css
@@ -24,7 +24,7 @@ body {
     --background-botton:  #F5F4FA;
     --gray-color:         #757575;
     --background-2:       #2F303A;
-    --hover-color:        #2196F3;
+    --hover-color:        #2196F3; /* color select */
 }
 
 p{
@@ -108,7 +108,7 @@ img {
     color: var(--gray-color);
 }
 
-.link:hover, .link:focus {
+a:hover, a:focus {
     color: var(--hover-color);
 }
 
@@ -140,6 +140,7 @@ img {
 
 .cab .contact-list{
 display: flex;
+margin-left: auto;
 }
 
 
@@ -153,9 +154,15 @@ display: flex;
     margin-right: 50px;
 }
 
-.contact-list{
-    margin-left: auto;
+.contact-list-item:hover, .contact-list-item:focus{
+    fill: var(--hover-color);
 }
+
+            .mail svg{
+    margin-right: 10px;
+    padding: 0px;
+}
+
 
 
 /* ------------------------------------------------------ */
@@ -228,6 +235,17 @@ display: flex;
 
 /* -------------- Seccion caracteristicas --------------- */
 
+.icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    
+    width: 270px;
+    height: 120px;
+    background: #F5F4FA;
+    border-radius: 4px;
+}
 
 .Characters-list{
     letter-spacing: 0.03em;
@@ -296,6 +314,23 @@ display: flex;
     flex-basis: calc((100% - 60px)/3);
 }
 
+.product-list-img>h3{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    
+    color: #FFFFFF;
+    width: 370px;
+    height: 70px;
+
+    background: rgba(47, 48, 58, 0.8);
+}
+
 
 /* ------------------- Nuestro equipo ------------------- */
 
@@ -340,7 +375,7 @@ display: flex;
 .team-list-img{
     width: 270px;
     flex-direction: column;
-    flex-basis: calc((100% - 111px ) / 4);
+    flex-basis: calc((100% - 111px) / 4);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -352,6 +387,56 @@ display: flex;
 
 .team-list  .team-list-name{
     margin-bottom: 10px;
+}
+
+/* -------------------- Estilos svg -------------------- */
+
+.icon-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /* gap: 10px; */
+    margin-top: 28px;  
+}
+
+.icon-media{
+    display: flex;
+    flex-basis: calc((100% - 30px) / 4); 
+}
+
+
+.social-media {
+    border-radius: 50%;
+    height: 44px;
+    padding: 12px;
+    background: rgba(255, 255, 255, 0.1);
+    fill: #afb1b8;
+}
+
+.social-media:hover{
+    background:var(--hover-color);
+    fill: var(--background-color);
+}
+
+/* ----------------- Clientes regulares ----------------- */
+
+.client-cont{
+    /* display: flex; */
+    /* justify-content: center; */
+    /* justify-items: center; */
+/* border: 1px dashed #212121; */
+}
+.client-list{
+    /* width: 170px; */
+    /* border: 1px solid #AFB1B8; */
+    /* border-radius: 4px; */
+}
+
+
+
+.client-icon{
+    /* fill: #AFB1B8; */
+        /* border: 1px dashed #212121; */
 }
 
 /* ------------------------------------------------------ */
@@ -388,14 +473,19 @@ display: flex;
 /* ----------------------> Flexbox <--------------------- */
 /* ------------------------------------------------------ */
 
-
 .footer-contact{
     display: flex;
     padding-top: 60px;
     padding-bottom: 60px;
 }
 
-.footer-contact .logo{
+.cont-contact{
+    margin-left: 215px;
+    margin-right: 0;
+    width: 231px;
+}
+
+.cont-contact>.logo{
     padding: 0;
     width: 145px;
     display: flex;
@@ -412,6 +502,48 @@ display: flex;
     margin-bottom: 9px;
 }
 
+/* --------------- Redes sociales --------------- */
+
+.cont-social{
+    margin-left: 70px;
+}
+
+.title-footer{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+/* ----------------- estilos svg ----------------- */
+.icon-nav{
+    margin-top: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.icon-footer{
+    display: flex;
+    flex-basis: calc(( 100% - 30px )/4);
+}
+
+.footer-media{
+    border-radius: 50%;
+    height: 44px;
+    padding: 12px;
+    background: rgba(255, 255, 255, 0.1);
+    fill: #afb1b8;
+}
+
+.footer-media:hover{
+    background: var(--hover-color);
+    fill: var(--background-color);
+}
 
 
 /* ----------------------------------------------------- */
@@ -507,3 +639,4 @@ display: flex;
 .text-cont-1{
     padding: 20px 24px;
 }
+
