--- a/css/Styles.css
+++ b/css/Styles.css
@@ -158,7 +158,7 @@ margin-left: auto;
     fill: var(--hover-color);
 }
 
-            .mail svg{
+.mail svg{
     margin-right: 10px;
     padding: 0px;
 }
@@ -186,7 +186,7 @@ margin-left: auto;
 .section-title{
     text-align: center; 
     background-image: linear-gradient(70deg,rgba(47, 48, 58, 0.4),rgba(3, 0, 0, 0.4)), url("../imagenes/Imagen.jpg");
-    /* background-repeat: no-repeat;*/
+    /* background-repeat: no-repeat; */
     background-size: 100% 100%; 
 
 }
@@ -224,7 +224,7 @@ margin-left: auto;
     margin: 0 auto;
     padding: 0;
     display: block;
-    max-width: 690px;
+    max-width: 843px;
     margin-bottom: 30px;
 }
 
@@ -330,6 +330,39 @@ margin-left: auto;
 
     background: rgba(47, 48, 58, 0.8);
 }
+.title-product{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+}
+
+/* -------------flex box---------------- */
+
+.title-product{  
+    /* padding: 27px auto; 
+    display: flex;
+    /* position: absolute; 
+    width: 370px;
+    height: 70px;
+    left: 215px;
+    top: 1435px;
+
+    background: rgba(47, 48, 58, 0.8); */
+    position: absolute;
+    top: 0%;
+    width:370px;
+    padding: 27px 0;
+    background: rgba(47, 48, 58, 0.8);
+    margin: auto;
+    margin-top: 72%;
+}
 
 
 /* ------------------- Nuestro equipo ------------------- */
@@ -414,6 +447,7 @@ margin-left: auto;
 }
 
 .social-media:hover{
+
     background:var(--hover-color);
     fill: var(--background-color);
 }
@@ -421,23 +455,32 @@ margin-left: auto;
 /* ----------------- Clientes regulares ----------------- */
 
 .client-cont{
-    /* display: flex; */
-    /* justify-content: center; */
-    /* justify-items: center; */
-/* border: 1px dashed #212121; */
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    /* border: 1px dashed #212121; */
 }
+
 .client-list{
-    /* width: 170px; */
-    /* border: 1px solid #AFB1B8; */
-    /* border-radius: 4px; */
+    width: 170px;
+    display: flex; 
+    border-radius: 4px;
+    flex-basis: calc(( 100% - 150px ) / 6);
 }
-
-
 
 .client-icon{
-    /* fill: #AFB1B8; */
-        /* border: 1px dashed #212121; */
+    padding: 14.9px 32px ;
+    border: 1px solid #AFB1B8;
+    display: flex;
+    fill: #AFB1B8;
 }
+
+.client-icon:hover, .client-icon:focus{
+    border: 1px solid var(--hover-color);
+    fill: var(--hover-color);
+}
+
 
 /* ------------------------------------------------------ */
 /* ---------------------- Footer ------------------------ */
@@ -464,7 +507,7 @@ margin-left: auto;
 
 }
 
-.footer-contact-list-item:hover,.footer-contact-list.item:focus{
+.footer-contact-list-item:hover, .footer-contact-list.item:focus{
     color: var(--hover-color);
 }
 
@@ -615,20 +658,25 @@ margin-left: auto;
 
 /* --------------- Contenedor de tarjetas --------------- */
 .card-set{
+    margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
     width: 350;
-    gap: 30px;
+    gap: 24px;
 }
 
 .briefcase-list-item{
     flex-basis: calc((100% - 60px) / 3);
     justify-content: center;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
-    0px 4px 4px rgba(0, 0, 0, 0.06), 
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+    border: 1px solid #EEEEEE;
 } 
 
+.briefcase-list-item:hover, .briefcase-list-item:focus{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+}
 
 .card-set h2{
     width: 322px;
